Updated information and fixed spacing issue

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -30,6 +30,7 @@ html {
 header {
   position: relative;
   background-image: url("../images/dots.png");
+  background-size: 100%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
