--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -163,7 +163,7 @@ a {
 }
 
 #projects-section {
-    margin-bottom: 190px;
+    margin-bottom: 5%;
 }
 
 #return-link {
